src/builder/tests/inserts/snapshots/ciboulette2pg__builder__tests__inserts__insert__relationship_internal_single.snap
---
source: src/builder/tests/inserts/insert.rs
expression: "sqlformat::format(query.as_str(), &sqlformat::QueryParams::None,\n                  sqlformat::FormatOptions::default())"

---
WITH "cte_peoples_insert_0" AS (
  INSERT INTO
    "public"."peoples" ("first-name", "last-name", "favorite_color")
  VALUES
    ($1, $2, $3) RETURNING *
),
"cte_peoples_data_1" AS (
  SELECT
    "cte_peoples_insert_0"."id" :: TEXT AS "id",
    "cte_peoples_insert_0"."id" AS "main_id",
    NULL :: TEXT AS "related_id",
    NULL :: TEXT AS "related_type",
    $4 :: TEXT AS "type",
    JSON_BUILD_OBJECT(
      $5,
      "cte_peoples_insert_0"."age",
      $6,
      "cte_peoples_insert_0"."first-name",
      $7,
      "cte_peoples_insert_0"."gender",
      $8,
      "cte_peoples_insert_0"."last-name",
      $9,
      "cte_peoples_insert_0"."twitter"
    ) AS "data",
    "cte_peoples_insert_0"."favorite_color" AS "rel_favorite_color"
  FROM
    "cte_peoples_insert_0"
) (
  SELECT
    "cte_peoples_data_1"."id",
    "cte_peoples_data_1"."type",
    "cte_peoples_data_1"."data",
    "cte_peoples_data_1"."related_type",
    "cte_peoples_data_1"."related_id"
  FROM
    "cte_peoples_data_1"
);
