src/builder/tests/inserts/snapshots/ciboulette2pg__builder__tests__inserts__insert__relationship_internal_single_include_all.snap
---
source: src/builder/tests/inserts/insert.rs
expression: "sqlformat::format(query.as_str(), &sqlformat::QueryParams::None,\n                  sqlformat::FormatOptions::default())"

---
WITH "cte_peoples_insert_0" AS (
  INSERT INTO
    "public"."peoples" ("first-name", "last-name", "favorite_color")
  VALUES
    ($1, $2, $3) RETURNING *
),
"cte_peoples_data_1" AS (
  SELECT
    "cte_peoples_insert_0"."id" :: TEXT AS "id",
    "cte_peoples_insert_0"."id" AS "main_id",
    NULL :: TEXT AS "related_id",
    NULL :: TEXT AS "related_type",
    $4 :: TEXT AS "type",
    JSON_BUILD_OBJECT(
      $5,
      "cte_peoples_insert_0"."age",
      $6,
      "cte_peoples_insert_0"."first-name",
      $7,
      "cte_peoples_insert_0"."gender",
      $8,
      "cte_peoples_insert_0"."last-name",
      $9,
      "cte_peoples_insert_0"."twitter"
    ) AS "data",
    "cte_peoples_insert_0"."favorite_color" AS "rel_favorite_color"
  FROM
    "cte_peoples_insert_0"
),
"cte_rel_articles_data_2" AS (
  SELECT
    "public"."articles"."id" :: TEXT AS "id",
    "public"."articles"."id" AS "main_id",
    "cte_peoples_data_1"."id" :: TEXT AS "related_id",
    $10 :: TEXT AS "related_type",
    $11 :: TEXT AS "type",
    JSON_BUILD_OBJECT(
      $12,
      "public"."articles"."body",
      $13,
      "public"."articles"."title"
    ) AS "data"
  FROM
    "public"."articles"
    INNER JOIN "public"."people-article" ON "public"."people-article"."article_id" = "public"."articles"."id"
    INNER JOIN "cte_peoples_data_1" ON "cte_peoples_data_1"."main_id" = "public"."people-article"."people_id"
),
"cte_rel_comments_data_3" AS (
  SELECT
    "public"."comments"."id" :: TEXT AS "id",
    "public"."comments"."id" AS "main_id",
    "cte_peoples_data_1"."id" :: TEXT AS "related_id",
    $14 :: TEXT AS "related_type",
    $15 :: TEXT AS "type",
    JSON_BUILD_OBJECT($16, "public"."comments"."body") AS "data",
    "public"."comments"."article" AS "rel_article",
    "public"."comments"."author" AS "rel_author"
  FROM
    "public"."comments"
    INNER JOIN "cte_peoples_data_1" ON "cte_peoples_data_1"."main_id" = "public"."comments"."author"
),
"cte_rel_favorite_color_data_4" AS (
  SELECT
    "public"."favorite_color"."id" :: TEXT AS "id",
    "public"."favorite_color"."id" AS "main_id",
    "cte_peoples_data_1"."id" :: TEXT AS "related_id",
    $17 :: TEXT AS "related_type",
    $18 :: TEXT AS "type",
    JSON_BUILD_OBJECT($19, "public"."favorite_color"."color") AS "data"
  FROM
    "public"."favorite_color"
    INNER JOIN "cte_peoples_data_1" ON "cte_peoples_data_1"."rel_favorite_color" = "public"."favorite_color"."id"
),
"cte_rel_people-article_data_5" AS (
  SELECT
    "public"."people-article"."id" :: TEXT AS "id",
    "public"."people-article"."id" AS "main_id",
    "cte_peoples_data_1"."id" :: TEXT AS "related_id",
    $20 :: TEXT AS "related_type",
    $21 :: TEXT AS "type",
    JSON_BUILD_OBJECT(
      $22,
      "public"."people-article"."article_id",
      $23,
      "public"."people-article"."people_id"
    ) AS "data",
    "public"."people-article"."article_id" AS "rel_article_id",
    "public"."people-article"."people_id" AS "rel_people_id"
  FROM
    "public"."people-article"
    INNER JOIN "cte_peoples_data_1" ON "cte_peoples_data_1"."main_id" = "public"."people-article"."people_id"
) (
  SELECT
    "cte_peoples_data_1"."id",
    "cte_peoples_data_1"."type",
    "cte_peoples_data_1"."data",
    "cte_peoples_data_1"."related_type",
    "cte_peoples_data_1"."related_id"
  FROM
    "cte_peoples_data_1"
)
UNION
ALL (
  SELECT
    "cte_rel_articles_data_2"."id",
    "cte_rel_articles_data_2"."type",
    "cte_rel_articles_data_2"."data",
    "cte_rel_articles_data_2"."related_type",
    "cte_rel_articles_data_2"."related_id"
  FROM
    "cte_rel_articles_data_2"
)
UNION
ALL (
  SELECT
    "cte_rel_comments_data_3"."id",
    "cte_rel_comments_data_3"."type",
    "cte_rel_comments_data_3"."data",
    "cte_rel_comments_data_3"."related_type",
    "cte_rel_comments_data_3"."related_id"
  FROM
    "cte_rel_comments_data_3"
)
UNION
ALL (
  SELECT
    "cte_rel_favorite_color_data_4"."id",
    "cte_rel_favorite_color_data_4"."type",
    "cte_rel_favorite_color_data_4"."data",
    "cte_rel_favorite_color_data_4"."related_type",
    "cte_rel_favorite_color_data_4"."related_id"
  FROM
    "cte_rel_favorite_color_data_4"
)
UNION
ALL (
  SELECT
    "cte_rel_people-article_data_5"."id",
    "cte_rel_people-article_data_5"."type",
    "cte_rel_people-article_data_5"."data",
    "cte_rel_people-article_data_5"."related_type",
    "cte_rel_people-article_data_5"."related_id"
  FROM
    "cte_rel_people-article_data_5"
);
